# KalangoRTOS

./: .gitignore  .gitmodules  .hil_tmp_backport.py  CMakeLists.txt  LICENSE.md  README.md  meson.build  qemu_out.txt  qemu_stdout.txt  tricore_test.c
.cursor/rules/: anti-slop.mdc  board-component-regression.mdc  boot-model.mdc  build-system.mdc  cmake-build.mdc  code-style.mdc  embedded-c.mdc  git-commits.mdc  kernel-arch-layering.mdc  linker-spec.mdc  qemu-emulation.mdc  regression-testing.mdc  test-execution.mdc  tricore-microkernel.mdc
.github/workflows/: ci.yml
.hil_tmp/: _status.txt  a14-diear.gdb  a14-diear2.gdb  a14-fault.txt  a14.gdb  addr2line-endinit-hil.txt  addr2line-naked-pinmux.txt  arch-diffstat.txt  attach-run2.out  attach-running.txt  attach-summary.txt  bisect-verdict.txt  bmhd-check.txt  bmhd-fix-verdict.txt  bmhd-flash.dump  bmhd-forcepc.txt  bmhd-isolate.txt  build-board-init-verbose.txt  build-slim-clean.txt  build-slim-warn.txt  button-fix.out  button_fix.sh  cbs-sw-verdict.txt  class3-decode.out  class3_decode.sh  class4-again.txt  class4_again.sh  clc_compare.sh  cmd-c.txt  console-suspect-verdict.txt  csfr-probe-tcl.txt  deadd.txt  deadd_dump.sh  decode.gdb  decode_naked.sh  decode_run.out  do_attach_dump2.sh  endinit-hil-halt.txt  endinit-naked-after.txt  endinit-nm.txt  (+129 more)
arch/arm/: arch.c  ctx_switch.S  irq.c  mpu_v7m.c  mpu_v8m.c  startup.S  trap.S  vectors.S
arch/arm_v6m/: arch_armv6m.c  arch_armv6m_asm.S
arch/arm_v7m/: arch_armv7m.c
arch/riscv/: arch.c  ctx_switch.S  irq.c  irq_clic.c  irq_clint.c  irq_internal.h  irq_plic.c  smp.c  startup.S  trap.S
arch/tricore/: arch.c  board_wdt_early_stub.S  ctx_switch.S  secondary.S  smp.c  startup.S  vectors.S
archs/: arch_armv6m.c  arch_armv7m.c
boards/: board_config.h.template
boards/qemu_mps2_an500/: board.cmake  board_config.h  board_console.c  board_console.h  board_internal.h  board_services.c  board_services.h  board_timer.c  board_timer.h  console.h  memory.ld
boards/qemu_mps2_an505/: board.cmake  board_config.h  board_console.c  board_console.h  board_init.c  board_services.c  memory.ld  qemu_console.c  qemu_printk_hook.c
boards/qemu_riscv_virt/: board.cmake  board_config.h  board_console.c  board_console.h  board_internal.h  board_services.c  board_timer.c  board_timer.h  console.h  memory.ld
boards/qemu_riscv_virt_smp4/: board.cmake  board_config.h  board_console.c  board_console.h  board_services.c  board_services.h  board_timer.c  board_timer.h  memory.ld  qemu_console.c  qemu_printk_hook.c
boards/qemu_tc27x/: memory.ld  qemu_console.c
boards/qemu_tc3xx/: board.cmake  board_config.h  board_console.c  board_console.h  board_services.c  board_services.h  board_timer.c  board_timer.h  console.h  memory.ld  qemu_console.c  qemu_printk_hook.c  root_thread.c
boards/tsim_tc27x/: MConfig  OConfig  memory.ld  tsim_console.c
build_m3/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_m3/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/: KalangoQemu.cmake  KalangoSources.cmake  KalangoTI.cmake  arch.cmake  arch_sources.cmake  board_resolve.cmake  component_api.cmake  config.cmake  config.h.in  generate_ld.py  linker_api.cmake  optimize.cmake  toolchain-arm-gcc.cmake  toolchain-arm-none-eabi.cmake  toolchain-riscv-gcc.cmake  toolchain-ti-c28x.cmake  toolchain-ti-c29.cmake  toolchain-tricore-gcc.cmake
components/drivers/: CMakeLists.txt
components/drivers/tricore_asclin/: CMakeLists.txt
components/drivers/tricore_asclin/include/: tricore_asclin.h
components/drivers/tricore_asclin/src/: asclin_internal.h  asclin_regs.h  client.c  server.c
components/hello_world/: CMakeLists.txt
components/ping_pong/: CMakeLists.txt
confs/: arm_cortex_base_config.h  kalango_config_c2000_c28.h  kalango_config_c2000_c29.h  kalango_config_cortexm0.h  kalango_config_cortexm4_float.h  kalango_config_qemu_cortexm3.h  kalango_config_qemu_cortexm4f.h  kalango_config_tricore.h  kernel_base_config.h  platform_config.h
docker/tricore/: Dockerfile  run_build.sh  run_tests.sh
docs/: api_spec.md  application_development_guide.md  arch_api_spec.md  arch_porting_guide.md  build_system_spec.md  component_spec.md  linker_spec.md  microkernel_book.md  microkernel_book_tricore.md  status.md  tricore_guide_pt.md
docs/arch/: riscv_implementation.md
examples/: CMakeLists.txt
examples/basic_scheduling/: main.c
examples/button_debounce/: main.c
examples/common/: mock_peripheral.c  mock_peripheral.h
examples/kernel_examples/: kernel_samples.h  mutex_sample.c  queue_sample.c  semaphore_sample.c  task_sample.c  timer_sample.c
examples/nrf52_examples/: mdk  meson.build
examples/nrf52_examples/blink/: cross-file.txt  main.c  meson.build
examples/nrf52_examples/blink/config/: kalango_config.h
examples/softirq_demo/: main.c
include/: arch.h  clock.h  core.h  irq.h  kalango_api.h  kernel_objects.h  kernel_types.h  list.h  mutex.h  object_pool.h  platform.h  queue.h  sched.h  semaphore.h  task.h  timer.h
kernel/: kernel_main.c
lib/: print_out.c  tlsf.c  tlsf.h
microkernel/: ul_arch_weak.c  ul_microkernel_core.c  ul_sched.c
scripts/: kalango_qemu.py  requirements.txt  run_all.py  run_examples.py  run_examples_tricore.py  run_tests.py  run_tests_tricore.py  setup_venv.sh
source/: clock.c  core.c  irq.c  mutex.c  object_pool.c  priority_queue.c  queue.c  sched_fifo.c  sched_round_robin.c  semaphore.c  softirq.c  task.c  timer.c
src/: clock.c  core.c  kalango.c  mutex.c  object_pool.c  queue.c  sched_fifo.c  sched_round_robin.c  semaphore.c  task.c  timer.c
stub/: board_init_stub.c  board_services_stub.c  board_timer_stub.c  printk_stub.c  root_thread_stub.c
tests/: CMakeLists.txt  Makefile  integ_common.mk  integ_gen_config.mk  integ_kernel.mk  runner.c  test_dummy.c  test_ipc_api.c  test_irq_api.c  test_libul.c  test_linker.c  test_mem_api.c  test_notif_api.c  test_printk.c  test_support.h  test_thread_api.c
tools/: coverage_manifest.yaml  dev.py  gen_ci_test_report.py  gen_config.py  rename_ulmk.py  sdk_build.sh
utils/: print_out.c
(+355 files in other folders)
